force-app/main/default/objects/Process_Rule__c/Process_Rule__c.object-meta.xml
<CustomObject>
    <label>Process Rule</label>
    <nameField>
        <label>Process Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>