force-app/main/default/objects/Process_Rule__c/fields/ProcessTemplate__c.field-meta.xml
<CustomField>
    <fullName>ProcessTemplate__c</fullName>
    <label>Process Template</label>
    <referenceTo>Process_Template__c</referenceTo>
    <relationshipLabel>Process Rules</relationshipLabel>
    <relationshipName>Process_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>